# lite-luncher

./: .env.example  .gitignore  README.md
.agents/rules/: no_silent_fallbacks.md  telemetry_dependencies.md  use_py3.md
.agents/skills/credential-detector/: SKILL.md
.agents/skills/credential-detector/scripts/: detect_credentials.py
.agents/skills/sanity-checker/: SKILL.md
.agents/skills/variable-naming-checker/: SKILL.md
.agents/skills/variable-naming-checker/scripts/: check_variable_naming.py
.github/workflows/: code-review-agent.yaml  continuous-delivery.yaml  terraform-apply.yaml  terraform-destroy.yaml
agents/: README.md
agents/luncher_agent/: README.md  agents-cli-manifest.yaml  pyproject.toml
agents/luncher_agent/app/: agent.py  agent_runtime_app.py  fast_api_app.py  main.py
agents/luncher_agent/app/app_utils/: services.py  telemetry.py  typing.py  utility.py
agents/luncher_agent/deployment/terraform/single-project/: variables.tf
agents/sched_agent/: README.md  agents-cli-manifest.yaml  pyproject.toml
agents/sched_agent/app/: agent.py  fast_api_app.py  main.py
agents/sched_agent/app/app_utils/: telemetry.py  typing.py
agents/sched_agent/app/data/: booked_meetings.json  catering_options.json  team_members.json
agents/sched_agent/deployment/terraform/single-project/: variables.tf
agents/sched_agent/tests/eval/: response_quality.py
data/catering/: README.md  catering_menu.json
scripts/: 01-setup-env.sh  02-init-api.sh  03-setup-github-actions.sh  04-setup-iam.sh  05-setup-tf.sh  generate_menu.py
utils/agents/code-review/: Dockerfile  README.md  pyproject.toml
utils/agents/code-review/app/: __init__.py  agent.py  main.py
