[project]
name = "luncher-agent"
version = "0.1.0"
description = "Centralized Luncher Multi-Agent Orchestrator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-agents-cli>=1.1.0",
    "google-adk[a2a,gcp]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[agent-engines,evaluation]>=1.156.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "uvicorn",
    "python-dotenv",
    "starlette",
    "sse-starlette",
    "a2a-sdk[http-server]~=0.3.22",
    "aiohttp>=3.13.4",
    "gcsfs>=2024.11.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "protobuf>=6.31.1,<7.0.0",
    "mcp>=1.0.0",
]

[tool.uv]
package = false
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
