[project]
name = "sched-agent"
version = "0.1.0"
description = "Meeting Availability Coordination Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-agents-cli>=1.1.0",
    "google-adk[a2a,gcp]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[agent-engines,evaluation]>=1.156.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "uvicorn~=0.34.0",
    "python-dotenv",
    "starlette",
    "sse-starlette",
    "nest-asyncio",
    "a2a-sdk[http-server]~=0.3.22",
    "aiohttp>=3.13.4",
    "gcsfs>=2024.11.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "fastapi>=0.115.8,<1.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "sqlalchemy>=2,<3",
]

[tool.uv]
package = false
[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
