[project]
name = "code-review-agent"
version = "0.1.0"
description = "Antigravity-powered Code Review Agent for GitHub Pull Requests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "google-antigravity>=0.1.0",
    "google-auth>=2.29.0",
    "PyGithub>=2.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["app"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

